fix white space on the bottom of the page

--- a/css/contenu.css
+++ b/css/contenu.css
@@ -5,7 +5,6 @@
 }
 body,
 html {
-	min-height: 100vh;
 	font-family: 'Montserrat', sans-serif;
 	margin: 0;
 	padding: 0;
@@ -257,18 +256,15 @@ h2,
 	background: rgba(0, 0, 0, 0.5);
 }
 /* menu */
-.main {
-	z-index: 99;
+
+.menu {
 	position: absolute;
 	bottom: 0;
-}
-.menu {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	width: 100vw;
-	max-height: 10px;
-	padding: 30px;
+	height: 60px;
 	border-radius: 5px;
 	box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
 	background: linear-gradient(90deg, #c54365, #edb7b1);
@@ -293,8 +289,8 @@ h2,
 	object-fit: contain;
 }
 .picto_profil {
-	max-width: 40px;
-	height: 20%;
+	width: 30px;
+	height: 30px;
 	margin-left: 10%;
 }
 .picto_coeur {
